--- a/assessment/privacy.html
+++ b/assessment/privacy.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="theme-color" content="#ABD451"> <!--Sets theme color for browser’s UI for mobile devices.-->
-    <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png"> <!-- specifies icon for application (specific requirements for iOS-->
+    <meta name="theme-color" content="#ABD451" />
+    <!--Sets theme color for browser’s UI for mobile devices.-->
+    <link
+      rel="logo"
+      sizes="192x192"
+      href="/DECO7140/assessment/icons/frame_67.png"
+    />
+    <!-- specifies icon for application (specific requirements for iOS-->
 
     <!--Font from Google Fonts.-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <!--CSS Files-->
-    <link rel="stylesheet" href="./css/css_reset.css"/>
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/components.css"/>
-    <link rel="stylesheet" href="./css/layout.css"/>
-    
+    <link rel="stylesheet" href="./css/css_reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
+
     <!--JavaScript Files-->
     <script type="module" src="js/index.js" defer></script>
     <script type="module" src="js/components.js" defer></script>
@@ -29,13 +38,26 @@
   <body id="gridcontainer">
     <header>
       <!--Logo-->
-      <a href="index.html">
-        <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
+      <a href="index.html" aria-label="Go to homepage">
+        <img
+          class="logo"
+          src="./icons/Frame-68.png"
+          alt="Logo of Solo Tourer"
+        />
       </a>
 
       <!--Hamburger Menu-->
+      <!--Referenced from ByteGrad . (2023, February 24). Responsive Navbar With Animated Hamburger Menu (HTML, CSS & JS)  [Video]. YouTube. https://www.youtube.com/watch?v=YIVXOMvXmNE-->
+      <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
       <nav>
-        <div class="ham-menu">
+        <div
+          class="ham-menu"
+          aria-label="Toggle menu"
+          tabindex="0"
+          role="button"
+          aria-pressed="false"
+          aria-expanded="false"
+        >
           <span></span>
           <span></span>
           <span></span>
@@ -43,7 +65,7 @@
       </nav>
 
       <!--Navigation Bar-->
-      <nav id="flexnavbar">
+      <nav id="flexnavbar" aria-label="Main navigation">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
@@ -51,16 +73,20 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="login.html"><button>Login</button></a>
+      <a class="cta" href="login.html" aria-label="Login to your account"
+        ><button>Login</button></a
+      >
 
       <!--Hamburger Menu-->
-      <div class="off-screen-menu">
+      <div class="off-screen-menu" aria-label="Off-screen menu">
         <ul>
           <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
           <a href="community.html">Community</a>
-          <a href="insights_recommendations.html">Insights and Recommendations</a>
+          <a href="insights_recommendations.html"
+            >Insights and Recommendations</a
+          >
           <a href="login.html">Login</a>
         </ul>
       </div>
@@ -69,57 +95,135 @@
     <main>
       <!-- Title -->
       <div class="privacy-title">
-          <h1>Privacy Policy for Solo Tourer</h1>
+        <h1>Privacy Policy for Solo Tourer</h1>
       </div>
 
-        <!-- Text content of privacy policy -->
+      <!-- Text content of privacy policy -->
+      <!--Created with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
       <div class="guide-text">
         <h2>Introduction</h2>
-        <p>Solo Tourer is committed to safeguarding your privacy and ensuring that your personal information is protected. This Privacy Policy explains how we collect, use, share, and protect your data when you use our app and website, designed to help women aged 23 to 29 solo travel confidently and safely in Rio de Janeiro, Brazil.</p>
+        <p>
+          Solo Tourer is committed to safeguarding your privacy and ensuring
+          that your personal information is protected. This Privacy Policy
+          explains how we collect, use, share, and protect your data when you
+          use our app and website, designed to help women aged 23 to 29 solo
+          travel confidently and safely in Rio de Janeiro, Brazil.
+        </p>
         <h2>1. Information We Collect</h2>
-        <p>We collect personal information to enhance your experience on our platform and provide safe and community-centered travel services. The types of information we may collect include:</p>
-        <p>Personal Information: Name, email address, age, and contact information to verify identity, create accounts, and provide tailored services.</p>
-        <p>Travel Preferences and Community Engagement: Interests, travel preferences, event RSVPs, and community interactions to help match you with relevant events, tips, and fellow travelers.</p>
-        <p>Location Data: With your consent, we may collect location data to enhance safety features, provide real-time recommendations, and suggest nearby events.</p>
-        <p>Device Information: Information about your device, including operating system, device ID, and browser type, to improve platform functionality and support.</p>
+        <p>
+          We collect personal information to enhance your experience on our
+          platform and provide safe and community-centered travel services. The
+          types of information we may collect include:
+        </p>
+        <p>
+          Personal Information: Name, email address, age, and contact
+          information to verify identity, create accounts, and provide tailored
+          services.
+        </p>
+        <p>
+          Travel Preferences and Community Engagement: Interests, travel
+          preferences, event RSVPs, and community interactions to help match you
+          with relevant events, tips, and fellow travelers.
+        </p>
+        <p>
+          Location Data: With your consent, we may collect location data to
+          enhance safety features, provide real-time recommendations, and
+          suggest nearby events.
+        </p>
+        <p>
+          Device Information: Information about your device, including operating
+          system, device ID, and browser type, to improve platform functionality
+          and support.
+        </p>
         <h2>2. How We Use Your Information</h2>
         <p>We use the information we collect to:</p>
-        <p>Provide Core Services: Enable features such as travel tips, community events, and safety alerts.</p>
-        <p>Enhance User Experience: Tailor content, events, and community recommendations to your profile.</p>
-        <p>Ensure Safety: Provide real-time safety notifications and emergency contact options when enabled.</p>
-        <p>Communicate with You: Respond to inquiries, notify you about changes to our services, and send event or safety-related updates.</p>
+        <p>
+          Provide Core Services: Enable features such as travel tips, community
+          events, and safety alerts.
+        </p>
+        <p>
+          Enhance User Experience: Tailor content, events, and community
+          recommendations to your profile.
+        </p>
+        <p>
+          Ensure Safety: Provide real-time safety notifications and emergency
+          contact options when enabled.
+        </p>
+        <p>
+          Communicate with You: Respond to inquiries, notify you about changes
+          to our services, and send event or safety-related updates.
+        </p>
         <h2>3. Information Sharing and Disclosure</h2>
-        <p>We may share your information with third parties only in the following circumstances:</p>
-        <p>With Your Consent: If you choose to connect with community members, only limited profile details will be visible to others.</p>
-        <p>Service Providers: We work with trusted third parties who assist in operating our platform, including hosting, analytics, and communication services.</p>
-        <p>Legal Obligations: We may disclose your information if required by law or to protect our users and our rights.</p>
+        <p>
+          We may share your information with third parties only in the following
+          circumstances:
+        </p>
+        <p>
+          With Your Consent: If you choose to connect with community members,
+          only limited profile details will be visible to others.
+        </p>
+        <p>
+          Service Providers: We work with trusted third parties who assist in
+          operating our platform, including hosting, analytics, and
+          communication services.
+        </p>
+        <p>
+          Legal Obligations: We may disclose your information if required by law
+          or to protect our users and our rights.
+        </p>
         <h2>4. Your Choices</h2>
         <p>You have control over your personal information:</p>
-        <p>Account Settings: You may update or delete your account information in your settings.</p>
-        <p>Location Data: Enable or disable location services through your device settings at any time.</p>
-        <p>Community Preferences: Manage your visibility in community events or opt out of notifications.</p>
+        <p>
+          Account Settings: You may update or delete your account information in
+          your settings.
+        </p>
+        <p>
+          Location Data: Enable or disable location services through your device
+          settings at any time.
+        </p>
+        <p>
+          Community Preferences: Manage your visibility in community events or
+          opt out of notifications.
+        </p>
         <h2>5. Security of Your Information</h2>
-        <p>We use industry-standard security measures to protect your data from unauthorized access or disclosure. However, please be aware that no system is completely secure, and we cannot guarantee the absolute security of your information.</p>
+        <p>
+          We use industry-standard security measures to protect your data from
+          unauthorized access or disclosure. However, please be aware that no
+          system is completely secure, and we cannot guarantee the absolute
+          security of your information.
+        </p>
         <h2>6. Changes to This Privacy Policy</h2>
-        <p>We may update this Privacy Policy from time to time. We encourage you to review it periodically to stay informed about how we are protecting your information.</p>
+        <p>
+          We may update this Privacy Policy from time to time. We encourage you
+          to review it periodically to stay informed about how we are protecting
+          your information.
+        </p>
         <h2>7. Contact Us</h2>
-        <p>If you have any questions, concerns, or requests regarding this Privacy Policy, please contact us.</p>
-    </div>
-
+        <p>
+          If you have any questions, concerns, or requests regarding this
+          Privacy Policy, please contact us.
+        </p>
+      </div>
     </main>
 
     <footer class="footer">
       <h2>Acknowledgements</h2>
-      <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
-        I critically reviewed and edited all AI-generated content to ensure it reflects my own
-        understanding and perspective.</p>
-    <nav class="footer-links">
+      <p>
+        In this website development, I used ChatGPT and ClaudeAI to support code
+        debugging and optimisation and assist with code writing and
+        productivity, particularly to help suggest code snippets and/or refactor
+        existing code. I critically reviewed and edited all AI-generated content
+        to ensure it reflects my own understanding and perspective. I have
+        applied the GenAI and MT Usage Framework to ensure my use of these tools
+        supports my learning objectives and adheres to academic integrity
+        standards.
+      </p>
+      <nav class="footer-links" aria-label="Footer navigation">
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
         <a href="privacy.html">Privacy Policy</a>
-    </nav>
+      </nav>
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-
   </body>
 </html>
