--- a/assessment/about.html
+++ b/assessment/about.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="theme-color" content="#ABD451"> <!--Sets theme color for browser’s UI for mobile devices.-->
-    <link rel="logo" sizes="192x192" href="/DECO7140/assessment/icons/frame_67.png"> <!-- specifies icon for application (specific requirements for iOS-->
+    <meta name="theme-color" content="#ABD451" />
+    <!--Sets theme color for browser’s UI for mobile devices.-->
+    <link
+      rel="logo"
+      sizes="192x192"
+      href="/DECO7140/assessment/icons/frame_67.png"
+    />
+    <!-- specifies icon for application (specific requirements for iOS-->
 
     <!--Font from Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <!--CSS Files-->
-    <link rel="stylesheet" href="./css/css_reset.css"/>
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/components.css"/>
-    <link rel="stylesheet" href="./css/layout.css"/>
-    
+    <link rel="stylesheet" href="./css/css_reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
+
     <!--JavaScript Files-->
     <script type="module" src="js/page_load_message.js" defer></script>
     <script type="module" src="js/index.js" defer></script>
@@ -29,13 +38,26 @@
   <body id="gridcontainer">
     <header>
       <!--Logo-->
-      <a href="index.html">
-        <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
+      <a href="index.html" aria-label="Go to home page">
+        <img
+          class="logo"
+          src="./icons/Frame-68.png"
+          alt="Logo for Solo Tourer"
+        />
       </a>
 
       <!--Hamburger Menu-->
-      <nav>
-        <div class="ham-menu">
+      <!--Referenced from ByteGrad . (2023, February 24). Responsive Navbar With Animated Hamburger Menu (HTML, CSS & JS)  [Video]. YouTube. https://www.youtube.com/watch?v=YIVXOMvXmNE-->
+      <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
+      <nav aria-label="Main navigation">
+        <div
+          class="ham-menu"
+          aria-label="Toggle menu"
+          tabindex="0"
+          role="button"
+          aria-pressed="false"
+          aria-expanded="false"
+        >
           <span></span>
           <span></span>
           <span></span>
@@ -43,7 +65,7 @@
       </nav>
 
       <!--Navigation Bar-->
-      <nav id="flexnavbar">
+      <nav id="flexnavbar" aria-label="Primary navigation">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
@@ -51,7 +73,9 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="login.html"><button>Login</button></a>
+      <a class="cta" href="login.html" aria-label="Login to your account"
+        ><button>Login</button></a
+      >
 
       <!--Hamburger Menu-->
       <div class="off-screen-menu">
@@ -60,47 +84,81 @@
           <a href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
           <a href="community.html">Community</a>
-          <a href="insights_recommendations.html">Insights and Recommendations</a>
+          <a href="insights_recommendations.html"
+            >Insights and Recommendations</a
+          >
           <a href="login.html">Login</a>
         </ul>
       </div>
-
     </header>
 
     <main>
-      <img src="./icons/Frame-66.png" alt = "Logo" class="title-logo">
+      <img
+        src="./icons/Frame-66.png"
+        alt="Logo for Solo Tourer"
+        class="title-logo"
+      />
 
       <div class="contact-container">
         <div class="title-container-contact">
           <div class="container-headings">
-              <h2>Solo Tourer is an app and website that aims to help women, specifically between the ages of 23 to 29, safely and confidently solo travel across Rio de Janeiro, Brazil. </h2>
-              <p>Whilst there is a rising interest in solo traveling within young women, safety is still a major concern.</p>
-              <p>Travel apps often focus on one type of service or purpose: a local safety app, building travel communities or presenting travel tips and event booking.</p>
-              <p>Solo Tourer provides a holistic experience with all of those features and more in one place, which helps users have a connected and safe experience.</p>
+            <h2>
+              Solo Tourer is an app and website that aims to help women,
+              specifically between the ages of 23 to 29, safely and confidently
+              solo travel across Rio de Janeiro, Brazil.
+            </h2>
+            <p>
+              Whilst there is a rising interest in solo traveling within young
+              women, safety is still a major concern.
+            </p>
+            <p>
+              Travel apps often focus on one type of service or purpose: a local
+              safety app, building travel communities or presenting travel tips
+              and event booking.
+            </p>
+            <p>
+              Solo Tourer provides a holistic experience with all of those
+              features and more in one place, which helps users have a connected
+              and safe experience.
+            </p>
           </div>
-          <img src="./images/mobile-mockup2.png" alt="Group Photo">
+          <img
+            src="./images/mobile-mockup2.png"
+            alt="Mobile mockup showcasing Solo Tourer app features"
+          />
         </div>
       </div>
 
       <div class="contact-container2">
         <div class="title-container-contact">
-          <img src="./images/mobile-mockup.png" alt="Group Photo">
+          <img
+            src="./images/mobile-mockup.png"
+            alt="Mobile mockup of the Solo Tourer app"
+          />
           <div class="container-headings">
             <h2>All in one, right in your pocket.</h2>
-            <p>Attend events near you, find your people and explore Brazil with confidence!</p>
+            <p>
+              Attend events near you, find your people and explore Brazil with
+              confidence!
+            </p>
             <p>Available on iOS and Android</p>
           </div>
         </div>
       </div>
-
-     
     </main>
 
     <footer class="footer">
       <h2>Acknowledgements</h2>
-      <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
-        I critically reviewed and edited all AI-generated content to ensure it reflects my own
-        understanding and perspective.</p>
+      <p>
+        In this website development, I used ChatGPT and ClaudeAI to support code
+        debugging and optimisation and assist with code writing and
+        productivity, particularly to help suggest code snippets and/or refactor
+        existing code. I critically reviewed and edited all AI-generated content
+        to ensure it reflects my own understanding and perspective. I have
+        applied the GenAI and MT Usage Framework to ensure my use of these tools
+        supports my learning objectives and adheres to academic integrity
+        standards.
+      </p>
       <nav class="footer-links">
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
@@ -108,6 +166,5 @@
       </nav>
       <p>&copy; 2024 Your Name. All rights reserved.</p>
     </footer>
-
   </body>
 </html>
