--- a/assessment/budget-community.html
+++ b/assessment/budget-community.html
@@ -29,13 +29,15 @@
   <body>
     <header>
       <!--Logo-->
-      <a href="index.html">
+      <a href="index.html" aria-label="Go to homepage">
         <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
       </a>
 
       <!--Hamburger Menu-->
+      <!--Referenced from ByteGrad . (2023, February 24). Responsive Navbar With Animated Hamburger Menu (HTML, CSS & JS)  [Video]. YouTube. https://www.youtube.com/watch?v=YIVXOMvXmNE-->
+      <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
       <nav>
-        <div class="ham-menu">
+        <div class="ham-menu" aria-label="Toggle menu" tabindex="0" role="button" aria-pressed="false" aria-expanded="false">
           <span></span>
           <span></span>
           <span></span>
@@ -43,7 +45,7 @@
       </nav>
 
       <!--Navigation Bar-->
-      <nav id="flexnavbar">
+      <nav id="flexnavbar" aria-label="Main navigation">
         <a href="index.html">Home</a>
         <a href="safetyguides.html">Safety Guides</a>
         <a href="events.html">Events</a>
@@ -51,10 +53,10 @@
         <a href="insights_recommendations.html">Insights and Recommendations</a>
       </nav>
 
-      <a class = "cta" href ="login.html"><button>Login</button></a>
+      <a class = "cta" href ="login.html" aria-label="Login"><button>Login</button></a>
 
       <!--Hamburger Menu-->
-      <div class="off-screen-menu">
+      <div class="off-screen-menu" aria-label="Off-screen menu">
         <ul>
           <a href="index.html">Home</a>
           <a href="safetyguides.html">Safety Guides</a>
@@ -69,30 +71,39 @@
 
     <div>
       <main>
+        <div class="budget-title">
+          <h1>Budget</h1>
+        </div>
         
         <!--Discussion Board to Create Posts-->
+        <!--Created with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
         <section id="discussion-form" class="discussion-form">
           <h2>Start a New Discussion</h2>
-          <form id="postForm">
+          <form id="postForm" aria-label="Discussion Form">
               <textarea id="postContent" placeholder="What's on your mind?" required></textarea>
-              <button type="submit">Submit</button>
+              <button type="submit" aria-label="Submit discussion post">Submit</button>
           </form>
         </section>
 
         <!--Discussion Board Posts-->
-        <div class="posts">
+        <!--Created with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
+        <div class="posts" aria-label="Submit discussion post">
             <h2>Recent Posts</h2>
         </div>
         <div id="postFeed"></div>
 
       </main>
 
-      <footer class="footer">
+      <footer class="footer" aria-label="Footer Acknowledgements">
         <h2>Acknowledgements</h2>
-        <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
-          I critically reviewed and edited all AI-generated content to ensure it reflects my own
-          understanding and perspective.</p>
-        <nav class="footer-links">
+        <p>In this website development, I used ChatGPT and ClaudeAI to support code debugging and
+          optimisation and assist with code writing and productivity, particularly to help suggest
+          code snippets and/or refactor existing code. I critically reviewed and edited all AI-generated content to ensure it reflects my own
+          understanding and perspective.
+      
+          I have applied the GenAI and MT Usage Framework to ensure my use of these tools supports
+          my learning objectives and adheres to academic integrity standards.</p>
+        <nav class="footer-links" aria-label="Footer links>
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="privacy.html">Privacy Policy</a>
