--- a/assessment/safetyguides.html
+++ b/assessment/safetyguides.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Font from Google Fonts.-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <!--CSS Files-->
-    <link rel="stylesheet" href="./css/css_reset.css"/>
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/components.css"/>
-    <link rel="stylesheet" href="./css/layout.css"/>
+    <link rel="stylesheet" href="./css/css_reset.css" />
+    <link rel="stylesheet" href="./css/base.css" />
+    <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/layout.css" />
 
     <!--JavaScript Files-->
     <script type="module" src="./js/index.js" defer></script>
@@ -28,13 +31,26 @@
     <div id="gridcontainer">
       <header>
         <!--Logo-->
-        <a href="index.html">
-          <img class = "logo" src="./icons/Frame-68.png" alt = "Logo">
+        <a href="index.html" aria-label="Go to homepage">
+          <img
+            class="logo"
+            src="./icons/Frame-68.png"
+            alt="Logo of Solo Tourer"
+          />
         </a>
 
         <!--Hamburger Menu-->
+        <!--Referenced from ByteGrad . (2023, February 24). Responsive Navbar With Animated Hamburger Menu (HTML, CSS & JS)  [Video]. YouTube. https://www.youtube.com/watch?v=YIVXOMvXmNE-->
+        <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
         <nav>
-          <div class="ham-menu">
+          <div
+            class="ham-menu"
+            aria-label="Toggle menu"
+            tabindex="0"
+            role="button"
+            aria-pressed="false"
+            aria-expanded="false"
+          >
             <span></span>
             <span></span>
             <span></span>
@@ -42,134 +58,174 @@
         </nav>
 
         <!--Navigation Bar-->
-        <nav id="flexnavbar">
+        <nav id="flexnavbar" aria-label="Main navigation">
           <a href="index.html">Home</a>
           <a class="active" href="safetyguides.html">Safety Guides</a>
           <a href="events.html">Events</a>
           <a href="community.html">Community</a>
-          <a href="insights_recommendations.html">Insights and Recommendations</a>
+          <a href="insights_recommendations.html"
+            >Insights and Recommendations</a
+          >
         </nav>
-  
-        <a class = "cta" href ="login.html"><button>Login</button></a>
-        
+
+        <a class="cta" href="login.html" aria-label="Login to your account"
+          ><button>Login</button></a
+        >
+
         <!--Hamburger Menu-->
-        <div class="off-screen-menu">
+        <div class="off-screen-menu" aria-label="Off-screen menu">
           <ul>
             <a href="index.html">Home</a>
             <a class="active" href="safetyguides.html">Safety Guides</a>
             <a href="events.html">Events</a>
             <a href="community.html">Community</a>
-            <a href="insights_recommendations.html">Insights and Recommendations</a>
+            <a href="insights_recommendations.html"
+              >Insights and Recommendations</a
+            >
             <a href="login.html">Login</a>
           </ul>
-        </div>  
+        </div>
       </header>
 
       <main>
         <!-- Search bar for users to search through guides -->
         <div class="top-content">
           <div class="topnav">
-            <input type="text" id="searchInput" placeholder="Search..." aria-label="Search">
+            <input
+              type="text"
+              id="searchInput"
+              placeholder="Search..."
+              aria-label="Search guides"
+            />
           </div>
         </div>
 
-        <div class="article-list">
+        <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
+        <div class="article-list" aria-label="Guide list">
           <!-- First Article -->
           <div class="article" data-category="Popular">
             <div class="article-details">
-                <div class="article-info">
-                  <p>Claire Willows</p>
-                  <h3>Brasilia Travel Safety Guide</h3>
-                  <p class="author">Don't let the fear stop you!</p>
-                  <div class="article-meta">
-                      <span>1d ago</span> | 
-                      <span>224 views</span> | 
-                      <span>3 comments</span>
-                  </div>
-                  <div class="read-more">
-                    <a href="./read-more.html" class="button">Read More</a>
-                  </div>
+              <div class="article-info">
+                <p>Claire Willows</p>
+                <h3>Brasilia Travel Safety Guide</h3>
+                <p class="author">Don't let the fear stop you!</p>
+                <div class="article-meta" aria-label="Article meta information">
+                  <span>1d ago</span> | <span>224 views</span> |
+                  <span>3 comments</span>
                 </div>
-                <div class="article-image">
-                    <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
+                <div class="read-more">
+                  <a
+                    href="./read-more.html"
+                    class="button"
+                    aria-label="Read the Brasilia Travel Safety Guide"
+                    >Read More</a
+                  >
                 </div>
+              </div>
+              <div class="article-image">
+                <img src="./images//braisilia.jpg" alt="Brasilia" />
+              </div>
             </div>
           </div>
-
 
           <!-- Second Article -->
           <div class="article" data-category="Recent">
             <div class="article-details">
-                <div class="article-info">
-                  <p>Poppy Evans</p>
-                  <h3>Travelling to Rio de Janeiro?</h3>
-                  <p class="author">5 tips for staying safe!</p>
-                  <div class="article-meta">
-                      <span>1d ago</span> | 
-                      <span>224 views</span> | 
-                      <span>6 comments</span>
-                  </div>
-                  <div class="read-more">
-                    <a href="./read-more.html" class="button">Read More</a>
-                  </div>                 
+              <div class="article-info">
+                <p>Poppy Evans</p>
+                <h3>Travelling to Rio de Janeiro?</h3>
+                <p class="author">5 tips for staying safe!</p>
+                <div class="article-meta" aria-label="Article meta information">
+                  <span>1d ago</span> | <span>224 views</span> |
+                  <span>6 comments</span>
                 </div>
-                <div class="article-image">
-                    <img src="./images/Rio de Janeiro.jpg" alt="Rio de Janeiro" />
+                <div class="read-more">
+                  <a
+                    href="./read-more.html"
+                    class="button"
+                    aria-label="Read the Travelling to Rio de Janeiro"
+                    >Read More</a
+                  >
                 </div>
+              </div>
+              <div class="article-image">
+                <img src="./images/Rio de Janeiro.jpg" alt="Rio de Janeiro" />
+              </div>
             </div>
-        </div>
-  
+          </div>
+
           <!-- Third Article -->
           <div class="article" data-category="Popular">
-              <div class="article-details">
-                  <div class="article-info">
-                    <p>Alexis Bianchi</p>
-                    <h3>Sao Paulo Travel Safety Guide</h3>
-                    <p class="author">Top tips for staying safe!</p>
-                    <div class="article-meta">
-                        <span>Aug 20</span> | 
-                        <span>3K views</span> | 
-                        <span>25 comments</span>
-                    </div>
-                    <div class="read-more">
-                      <a href="./read-more.html" class="button">Read More</a>
-                    </div>                  
-                  </div>
-                  <div class="article-image">
-                      <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
-                  </div>
+            <div class="article-details">
+              <div class="article-info">
+                <p>Alexis Bianchi</p>
+                <h3>Sao Paulo Travel Safety Guide</h3>
+                <p class="author">Top tips for staying safe!</p>
+                <div class="article-meta" aria-label="Guide meta information">
+                  <span>Aug 20</span> | <span>3K views</span> |
+                  <span>25 comments</span>
+                </div>
+                <div class="read-more">
+                  <a
+                    href="./read-more.html"
+                    class="button"
+                    aria-label="Read the Sao Paulo Travel Safety Guide"
+                    >Read More</a
+                  >
+                </div>
               </div>
+              <div class="article-image">
+                <img src="./images/sao paulo.jpg" alt="Sao Paulo" />
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- Solo Tourer Newsletter Sign Up -->
+        <!--Edited with the help of OpenAI. (2024). ChatGPT (November 2024 version) [Large language model]. https://chat.openai.com/-->
         <div class="newsletter">
           <h2>Solo Tourer Newsletter</h2>
           <p>Our biggest stories, handpicked for you, written by you.</p>
           <div class="read-more-footer">
             <div class="rm-footer">
-              <input type="text" id="searchInput" placeholder="Enter your email" aria-label="Email">
-              <button class="signup-button">Sign Up!</button>
+              <input
+                type="text"
+                id="searchInput"
+                placeholder="Enter your email"
+                aria-label="Email for newsletter signup"
+              />
+              <button class="signup-button" aria-label="Sign up for newsletter">
+                Sign Up!
+              </button>
             </div>
-            <p class="signup-message" id="signupMessage" style="display: none;"></p>
+            <p
+              class="signup-message"
+              id="signupMessage"
+              style="display: none"
+            ></p>
           </div>
         </div>
-
       </main>
 
       <footer class="footer">
         <h2>Acknowledgements</h2>
-        <p>In this website, I used ChatGPT to suggest code snippets, to identify bugs and to refine comments.
-          I critically reviewed and edited all AI-generated content to ensure it reflects my own
-          understanding and perspective.</p>
-        <nav class="footer-links">
+        <p>
+          In this website development, I used ChatGPT and ClaudeAI to support
+          code debugging and optimisation and assist with code writing and
+          productivity, particularly to help suggest code snippets and/or
+          refactor existing code. I critically reviewed and edited all
+          AI-generated content to ensure it reflects my own understanding and
+          perspective. I have applied the GenAI and MT Usage Framework to ensure
+          my use of these tools supports my learning objectives and adheres to
+          academic integrity standards.
+        </p>
+        <nav class="footer-links" aria-label="Footer navigation">
           <a href="about.html">About</a>
           <a href="contact.html">Contact</a>
           <a href="privacy.html">Privacy Policy</a>
         </nav>
         <p>&copy; 2024 Your Name. All rights reserved.</p>
       </footer>
-
     </div>
   </body>
 </html>
